--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 ## TL;DR;
 
 ```console
-$ helm repo add hkube https://hkube.io/helm
+$ helm repo add hkube https://hkube.org/helm
 $ helm repo update
 $ helm install hkube hkube/hkube  --version=0.1.2
 ```
@@ -33,7 +33,7 @@ Hkube is installed using helm. Both helm 2 and the newer [helm 3](https://helm.s
 To install the chart with the release name `hkube`:
 
 ```console
-$ helm repo add hkube http://hkube.io/helm/
+$ helm repo add hkube http://hkube.org/helm/
 $ helm install hkube hkube/hkube
 ```
 
